==> RT-Thread/rt-thread/bsp/nuclei/libraries/gd32vf103/HAL_Drivers/drv_usart.c <==
#include <drv_usart.h>

static rt_err_t gd32_configure(struct rt_serial_device *serial,
                               struct serial_configure *cfg)
{
    struct gd32_uart *usart_obj;
    struct gd32_uart_config *usart;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    usart_obj = (struct gd32_uart *) serial->parent.user_data;
    usart = usart_obj->config;
    RT_ASSERT(usart != RT_NULL);

    usart_deinit(usart->uart_base);
    usart_baudrate_set(usart->uart_base, cfg->baud_rate);

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        usart_word_length_set(usart->uart_base, USART_WL_8BIT);
        break;

    case DATA_BITS_9:
        usart_word_length_set(usart->uart_base, USART_WL_9BIT);
        break;
    default:
        usart_word_length_set(usart->uart_base, USART_WL_8BIT);
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        usart_stop_bit_set(usart->uart_base, USART_STB_1BIT);
        break;
    case STOP_BITS_2:
        usart_stop_bit_set(usart->uart_base, USART_STB_2BIT);
        break;
    default:
        usart_stop_bit_set(usart->uart_base, USART_STB_1BIT);
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        usart_parity_config(usart->uart_base, USART_PM_NONE);
        break;
    case PARITY_ODD:
        usart_parity_config(usart->uart_base, USART_PM_ODD);
        break;
    case PARITY_EVEN:
        usart_parity_config(usart->uart_base, USART_PM_EVEN);
        break;
    default:
        usart_parity_config(usart->uart_base, USART_PM_NONE);
        break;
    }
    usart_hardware_flow_rts_config(usart->uart_base, USART_RTS_DISABLE);
    usart_hardware_flow_cts_config(usart->uart_base, USART_CTS_DISABLE);
    usart_receive_config(usart->uart_base, USART_RECEIVE_ENABLE);
    usart_transmit_config(usart->uart_base, USART_TRANSMIT_ENABLE);
    usart_enable(usart->uart_base);

    return RT_EOK;
}

static rt_err_t gd32_control(struct rt_serial_device *serial, int cmd,
                             void *arg)
{
    struct gd32_uart *usart_obj;
    struct gd32_uart_config *usart;

    RT_ASSERT(serial != RT_NULL);
    usart_obj = (struct gd32_uart *) serial->parent.user_data;
    usart = usart_obj->config;
    RT_ASSERT(usart != RT_NULL);

    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
        ECLIC_DisableIRQ(usart->irqn);
        usart_interrupt_disable(usart->uart_base, USART_INT_RBNE);
        break;
    case RT_DEVICE_CTRL_SET_INT:
        ECLIC_EnableIRQ(usart->irqn);
        /* enable USART0 receive interrupt */
        usart_interrupt_enable(usart->uart_base, USART_INT_RBNE);
        break;
    }

    return RT_EOK;
}

static int gd32_putc(struct rt_serial_device *serial, char ch)
{
    struct gd32_uart *usart_obj;
    struct gd32_uart_config *usart;

    RT_ASSERT(serial != RT_NULL);
    usart_obj = (struct gd32_uart *) serial->parent.user_data;
    usart = usart_obj->config;
    RT_ASSERT(usart != RT_NULL);

    usart_data_transmit(usart->uart_base, (uint8_t) ch);
    while (usart_flag_get(usart->uart_base, USART_FLAG_TBE) == RESET);

    return 1;
}

static int gd32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct gd32_uart *usart_obj;
    struct gd32_uart_config *usart;

    RT_ASSERT(serial != RT_NULL);
    usart_obj = (struct gd32_uart *) serial->parent.user_data;
    usart = usart_obj->config;
    RT_ASSERT(usart != RT_NULL);

    ch = -1;
    if (RESET != usart_flag_get(usart->uart_base, USART_FLAG_RBNE))
    {
        ch = usart_data_receive(usart->uart_base) & 0xff;
    }

    return ch;
}

void USART1_IRQHandler(void)
{
    rt_interrupt_enter();

    usart_isr(&uart_obj[GDUART1_INDEX].serial);

    rt_interrupt_leave();
}

void USART2_IRQHandler(void)
{
    rt_interrupt_enter();

    usart_isr(&uart_obj[GDUART2_INDEX].serial);

    rt_interrupt_leave();
}

void UART4_IRQHandler(void)
{
    rt_interrupt_enter();

    usart_isr(&uart_obj[GDUART4_INDEX].serial);

    rt_interrupt_leave();
}

int rt_hw_usart_init(void)
{
    rt_size_t obj_num;
    int index;

#ifdef BSP_USING_UART0
    rcu_periph_clock_enable(RCU_USART0);
#endif
#ifdef BSP_USING_UART1
    rcu_periph_clock_enable(RCU_USART1);
#endif
#ifdef BSP_USING_UART2
    rcu_periph_clock_enable(RCU_USART2);
#endif
#ifdef BSP_USING_UART3
    rcu_periph_clock_enable(RCU_UART3);
#endif
#ifdef BSP_USING_UART4
    rcu_periph_clock_enable(RCU_UART4);
#endif

    obj_num = sizeof(uart_obj) / sizeof(struct gd32_uart);
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    rt_err_t result = 0;

    for (index = 0; index < obj_num; index++)
    {
        /* init UART object */
        uart_obj[index].config = &uart_config[index];
        uart_obj[index].serial.ops = &gd32_uart_ops;
        uart_obj[index].serial.config = config;

        /* register UART device */
        result = rt_hw_serial_register(&uart_obj[index].serial,
                                       uart_obj[index].config->name,
                                       RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX
                                       | RT_DEVICE_FLAG_INT_TX, &uart_obj[index]);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
